--- a/css/style.css
+++ b/css/style.css
@@ -87,20 +87,40 @@ header{
     
 }
 
-
-
-
-
-#particles{ 
-  position: absolute; 
-  width: 100%; 
-  height: 100%; 
-  background-image: url(/img/intro-bg.png);
+#intro{ 
+  height: 600px;
+  background-image: url("../img/intro-bg.png");
   background-repeat: no-repeat; 
+  position: center;
   background-size: cover; 
-  background-position: 100%; 
-}
+  background-position:  100% 100%; 
   
+}
+
+/* ------------------------Desenvolvedores-------------------------------------------------------- */
 
 
-     
+/* .round-container {
+  width: 17rem;
+  height: 17rem;
+  border-radius: 100%;
+  overflow: hidden;
+  position: relative;
+}
+.round-container img {
+  width: initial;
+  height: inherit;
+  max-width: none;
+  position: absolute;
+  transform: translateX(-50%);
+} */
+
+
+.circle{
+  background-color: #ddd;
+  border-radius: 100%;
+  height: 200px;
+  object-fit: cover;
+  width: 200px;  
+}
+
